fixed home  spacing issue on top between video and navbar

--- a/src/app/components/Navbar/Navbar.module.css
+++ b/src/app/components/Navbar/Navbar.module.css
@@ -1,7 +1,8 @@
 .navbar {
-  position: sticky;
+  position: fixed;
   top: 0;
   display: flex;
+  width: -webkit-fill-available;
   justify-content: space-between;
   align-items: center;
   padding: 1rem;
@@ -10,6 +11,20 @@
   -webkit-filter: blur(0px);
   backdrop-filter: blur(8px);
   z-index: 1000; /* Ensure the navigation bar is above the content */
+  max-width: 150rem;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.spacingNavbar {
+  display: flex;
+  width: -webkit-fill-available;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem;
+  max-width: 150rem;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .logo img {
