--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -7,3 +7,18 @@
     white-space: pre-line;
     line-height: 118px; /* 107.273% */
   }
+
+.appBarSpace {
+  visibility: hidden;    /* Make the div invisible */
+  pointer-events: none;  /* Make the div non-interactable */
+}
+
+.content {
+  position: absolute;
+  width: 100%;
+  z-index: 2;
+  top: 0%;
+  max-width: 150rem;
+  margin-left: auto;
+  margin-right: auto;
+}
